# LiDAR-FSAE

./: .gitignore  README.md
docu/.obsidian/: workspace.json
docu/FSAE/: Circuit.md  Formula Student.md
docu/LiDAR/: APPLICATION.md  AUTONOMOUS.md  CAMERA CHOICE.md  CAMERA SPECS.md  INTRODUCTION.md  LIDAR TECHNOLOGY.md  PERCEPTION.md  POINT-CLOUD PROCESSING.md  Sources.md  __Research__.md
docu/LiDAR/hidden/: CONTEXT.md
docu/MEETING NOTES/: 07022023 - Munteanu Meeting.md  17022023 - Lemeire Meeting 1.md  27022023 - Lemeire Meeting
src/FSD_tracks_inventory/: notebook.ipynb
src/FSD_tracks_inventory/pickle/: SLAM_map_oval_track.pickle
src/ROS2_nodes/cone_mapper/: package.xml  setup.py
src/ROS2_nodes/cone_navigator/: package.xml  setup.cfg
src/ROS2_nodes/cone_navigator/cone_navigator/: cone_navigator_node.py  test_node.py
src/ROS2_nodes/cone_racer/: package.xml  setup.cfg  setup.py
src/ROS2_nodes/cone_racer/cone_racer/: PP.py  cone_racer2_node.py  cone_racer_node.py  controller_node.py  curvature.py  discoverylap.ipynb  map_processing.ipynb  path_planning.py
src/ROS2_nodes/move_tb3/: setup.py
src/ROS2_nodes/simple_2D_perception/: cone_detection.ipynb
src/cone_mapper/: map_data.pickle  map_data2.pickle  setup.cfg
src/cone_mapper/cone_mapper/: SLAM.ipynb  cone_mapper_node.py
src/cone_mapper/config/: params.yml
src/cone_navigator/: setup.py
src/cone_navigator/cone_navigator/: cone_navigator_node.py  cone_visualizer_node.py  test_node.py
src/move_tb3/: package.xml  setup.cfg
src/path_planning/: concave_hull.py  path_planning.py
(+2 files in other folders)
